# optimal-weight-formats

./: .gitignore  0107-GroupFormatDesign.ipynb  0127-Exploration.ipynb  0203-GroupFormatModeling.ipynb  0208-Distributions.ipynb  0214-Stats.ipynb  0220-Experiments.ipynb  0312-Stats.ipynb  0317-LloydMaxInit.ipynb  0328-ScaleMBits.ipynb  0401-FisherSensitivity.ipynb  0403-FittingFormats.ipynb  0414-SensitivityExample.ipynb  0414-SensitivityPrediction.ipynb  0421-SensitivitySweep.ipynb  0422-UpdateModels.ipynb  0423-BadRmsScaling.ipynb  0426-Sweep.ipynb  0429-FixCompressSparse.ipynb  0430-FittingFormatsV2.ipynb  0430-RefreshAndFixVariable.ipynb  0503-GemmaFisherIssue.ipynb  0504-Sweep.ipynb  0528-SmallDeltaKLPrediction.ipynb  0606-PlotCodepoints.ipynb  0613-Downstream.ipynb  0619-RecoveryTraining.ipynb  0623-Micro-QAT.ipynb  0625-QatInitialSweep.ipynb  0627-QatSota.ipynb  0630-QatSpeed.ipynb  0630-QatVariants.ipynb  0708-QatMain.ipynb  0729-VQ.ipynb  0920-SensitivityViz.ipynb  0925-ScalarCompression.ipynb  0927-WeightedScalarCompression.ipynb  1120-Gemma-SensitivityV2.ipynb  Demo.ipynb  LICENSE  (+8 more)
paper/: CodeExamples.ipynb  Experiments.ipynb  FollowUp.ipynb  Models.ipynb  QAT.ipynb  README.md  Simulations.ipynb  Workshop.ipynb  data_utils.py  plot_utils.py  run_sweep.py
scripts/: 0219_run_initial_sweep.py  0221_run_weight_stats.py  0422_run_update_models.py  0425_run_grid.py  0429_run_fix_compress_sparse.py  0430_run_refresh.py  0501_debug_memory.py  0502_run_fix_variable.py  0502_run_noise_sensitivity.py  0503_run_llama8b_refresh.py  0504_run_baselines.py  0504_run_sweep.py  0505_run_empirical_fisher.py  0506_run_results.py  0506_run_results_code.py  0611_downstream_baselines.py  0616_basic_training.py  0617_test_fsdp.py  0619_recovery_training.py  0625_qat_initial_sweep.py  0630_qat_variants.py  0708_qat_main.py  check.sh  instance_setup.sh  run_downstream.py  run_fisher.py  run_qat.py  run_qat_2.py  run_sensitivity.py  run_token_prediction.py  run_weight_stats.py
weight_formats/: __init__.py  analysis.py  fit.py  (+5 more)
(+34 files in other folders)
